--- a/content/jp/post/20210124.jp.md
+++ b/content/jp/post/20210124.jp.md
@@ -2,7 +2,7 @@
 title: "Google site から引っ越してきました"
 date: 2021-01-24T01:31:57+09:00
 Description: ""
-Tags: [近況]
+Tags: ["近況"]
 Categories: []
 DisableComments: true
 math: true
@@ -24,17 +24,21 @@ Google site からホームページを移転しました。<!--more-->
 
   - ターミナル（OSに付属しています）
 
-  - mi（テキストエディタ）
+  - [mi](https://www.mimikaki.net/)（テキストエディタ）
 
     OS付属のテキストエディタでも良いですが、もう20年くらい使っているので私はこれです。
 
-  - Typora （Markdown 記述用）
+  - [Typora](https://typora.io/) （Markdown 記述用）
 
     ずっと使っているマークダウンエディタです。上の mi でももちろん大丈夫ですが、Typora での直感的な数式入力はとても便利です。
 
-  - GitHub Desktop（GitHub を使うデスクトップアプリ）
+  - [GitHub Desktop](https://desktop.github.com/)（GitHub を使うデスクトップアプリ）
 
     何が素晴らしいかは[ここ](https://ferret-plus.com/8498)などを見てください。
+
+  まずは GitHub に登録 → GitHub Desktop と連携。
+
+  その後は以下の参考にしたサイト通りに行いました。 
 
 - 参考にしたサイト
 
