--- a/content/jp/post/20210124.jp.md
+++ b/content/jp/post/20210124.jp.md
@@ -2,8 +2,8 @@
 title: "Google site から引っ越してきました"
 date: 2021-01-24T01:31:57+09:00
 Description: ""
-Tags: ["近況"]
-Categories: []
+Tags: ["Hugo"]
+Categories: ["近況"]
 DisableComments: true
 math: true
 ---
