--- a/content/jp/post/20210321.jp.md
+++ b/content/jp/post/20210321.jp.md
@@ -1,8 +1,8 @@
 ---
 title: "研究会（神戸大学）にて研究報告"
 date: 2021-03-21T09:29:57+09:00
-Tags: ["研究"]
-Categories: []
+Tags: []
+Categories: ["研究"]
 DisableComments: true
 math: true
 ---
