--- a/content/jp/post/20210124.jp.md
+++ b/content/jp/post/20210124.jp.md
@@ -10,7 +10,7 @@ math: true
 
 Google site からホームページを移転しました。<!--more-->
 
-このサイトは [GitHub](https://github.co.jp/) + [Hugo](https://gohugo.io/) を使っています。Google site からの引っ越し先候補として、気軽にエントリも書けて、ゼミのホームページも運営している [NOTE](https://note.com/) を使おうかと思ったのですが、TeXスタイルで簡単に数式入力が可能な（例えば \\(\displaystyle\int_0^\infty f(z)dz\\) みたいな） こともあり、Hugo を使うことにしました。テンプレートは [Anatole](https://themes.gohugo.io/themes/anatole/) を使っています。
+このサイトは [GitHub](https://github.co.jp/) + [Hugo](https://gohugo.io/) を使っています。Google site からの引っ越し先候補として、気軽にエントリも書けて、ゼミのホームページも運営している [NOTE](https://note.com/) を使おうかと思ったのですが、TeXスタイルで簡単に数式入力が可能な（例えば \\(\displaystyle\int_0^\infty f(z)dz\\) みたいな） こともあり、Hugo を使うことにしました。テンプレートは [Anatole](https://themes.gohugo.io/themes/anatole/) を使っています（特に、メニューの右端・下端にある白黒のカラーチェンジャーを気に入ってます）。
 
 10年ぶりぐらいにスタイルシートをいじったりして、とても楽しい移転作業でした。
 
