--- a/content/jp/post/20210518.jp.md
+++ b/content/jp/post/20210518.jp.md
@@ -7,7 +7,7 @@ DisableComments: true
 math: true
 ---
 
-私が青山学院大学経営学部で行なっているゼミの紹介サイトについて、Google siteから NOTE に[移転](https://note.com/hattorizemi)させました。<!--more-->
+私が青山学院大学経営学部および大阪経済大学経済学部で行なっているゼミの紹介サイトについて、Google siteから NOTE に[移転](https://note.com/hattorizemi)させました。<!--more-->
 
 [新しく作ったNOTEサイト](https://note.com/hattorizemi)では、ゼミの学生さんが行なっているグループ研究についての内容・簡易版スライドを掲載するだけでなく、将来的には論文の紗録のようなダイジェスト版も載せることができれば良いなと考えています。
 
