--- a/content/jp/post/20110124.jp.md
+++ b/content/jp/post/20110124.jp.md
@@ -9,9 +9,15 @@ math: true
 
 拙稿 [Hattori, K., (2010) "Strategic Voting for Noncooperative Environmental Policies in Open Economies", Environmental and Resource Economics, 46, 459-474, 2010.](https://link.springer.com/article/10.1007%2Fs10640-010-9349-6) の簡単な解説
 
+#### 研究の背景
+
 地球環境問題への関心が高まる中で，環境を配慮した政治家や政党が多く見られるようになってきました。<!--more-->2007年度のノーベル平和賞が，米元副大統領のゴア氏と「国連の気候変動に関する政府間パネル（IPCC)」に与えられたことは記憶に新しく，また欧州では「緑の党（Green Party)」と呼ばれる環境保護を強く主張する政党が政権の一端を担ったことさえありました。日本の政治においても，例えば有権者は「日本が国際関係の中で果たすべき役割」として「地球環境問題などの地球的規模の問題解決への貢献」を重要だと考える人が過半数いるという調査結果[^1)] もあります。つまり，環境に対する関心の高まりは，政治過程にも影響を及ぼすわけです。しかし一方で，環境政策の実施に対して後ろ向きな政党や有権者も存在します。それは，国際的なマーケットでの企業の競争を考えると，自国だけ厳しい環境政策を採用すると，自国企業の競争力を損なってしまうかもしれないという恐れがあるからです。
 
+#### 何をやったの？
+
 この研究では，国家間に地球環境の質という公共的利益と，国際市場での企業間の競争という相反する相互依存関係があるような世界において，民主的な政治家選択のプロセスによって，各国家でどのような性質を持った政治家が選択されるか（誕生するか）を，理論的に考察しました。具体的には，最初に各国家内で，選挙による政策策定者の選定が行われ，その後で選ばれた政策策定者が環境政策（排出税 もしくは 数量制限）を実施し，最後に各国家の代表的企業が国際市場で競争する，という3ステージのモデルを構築し，政策手段の選択や，市場競争の形態が，内生的な政治家選択にどのような偏りをもたらすのかを考察しました。
+
+#### 何がわかったの？
 
 定性分析の結果として，
 
