--- a/content/jp/post/20121214.jp.md
+++ b/content/jp/post/20121214.jp.md
@@ -9,11 +9,19 @@ math: true
 
 拙稿 Hattori, K., (2005) "Is Technological Progress Pareto-improving for a World with Global Public Goods?" Journal of Economics 84, 135-156. の簡単な解説
 
+#### 研究の背景
+
 この研究では，国際公共財に対して各国が自発的な貢献を行っているような世界において，様々なタイプの（外生的な）技術進歩が，各国の厚生に対してどのような影響を及ぼすのかを分析しました。国際公共財とは，<!--more-->環境改善の努力や国際平和維持への貢献など，各国の努力が他国にも良い影響を及ぼすような財・サービスのことを言います。この論文が分析するのは，そのような地球環境問題に対して各国が自発的な（そして戦略的な）環境改善の努力を行っているような状況や，国際的なテロリズムに対して，各国が自発的な軍事的協力を行っている状況を想定しています。
+
+#### 何をやったの？
 
 さて，このような国際関係の中で，ある1国において，一般的な財（私的財）の生産技術の進歩があった場合，自国や他国の経済厚生にどのような影響を及ぼすでしょうか。あるいは，ある1国において，公共財の生産技術の進歩があった場合，自国や他国の経済厚生にどのような影響を及ぼすでしょうか。また，全ての国の一般的な財の生産技術が同時的に向上したら，どうでしょうか．はたまた，全ての国において同時的に公共財の生産技術の向上が起こったらどうなるでしょうか？
 
-一般的に『技術の進歩』と聞けば私たちは，社会全体が良くなるイメージを持ちます。これまでより小さな費用で多くの私的財・公共財を生み出すことができるからです。しかしながら，国家がこのような公共財によって相互依存関係を持つ場合には，技術の進歩がいつでも良い結果をもたらすことは限らないことは，いくつかの研究が明らかにしていました。私のこの研究では，上記のような様々な種類の技術進歩が，全ての国にとって良い結果をもたらすための条件を導きました。そこでは，一般の財と公共財との『消費関係』がポイントであることを明らかにしました。厳密に言えば，
+一般的に『技術の進歩』と聞けば私たちは，社会全体が良くなるイメージを持ちます。これまでより小さな費用で多くの私的財・公共財を生み出すことができるからです。しかしながら，国家がこのような公共財によって相互依存関係を持つ場合には，技術の進歩がいつでも良い結果をもたらすことは限らないことは，いくつかの研究が明らかにしていました。
+
+#### 何がわかったの？
+
+私のこの研究では，上記のような様々な種類の技術進歩が，全ての国にとって良い結果をもたらすための条件を導きました。そこでは，一般の財と公共財との『消費関係』がポイントであることを明らかにしました。厳密に言えば，
 
 「もし一般の財と公共財との消費関係が，（ある程度の）補完性[^1)] を持っているのならば，どのようなタイプの技術進歩であっても，パレート改善的（つまり，全ての国にとって良い結果をもたらす）になる」
 
