--- a/content/jp/post/20121213.jp.md
+++ b/content/jp/post/20121213.jp.md
@@ -9,11 +9,17 @@ math: true
 
 拙稿 [Hattori, K., Higashida, K., (2012) "Misleading Advertising in Duopoly" Canadian Journal of Economics 45, 1154-1187.](https://onlinelibrary.wiley.com/doi/full/10.1111/j.1540-5982.2012.01730.x) の簡単な解説
 
+#### 研究の背景
+
 企業は様々な手段で，消費者に対して自社の製品を買わせるような宣伝活動を行っています。その中には，嘘・大げさ・まぎらわしいような広告や宣伝が<!--more-->まぎれています。「絶対にやせる」と消費者に誤認させるようなダイエット食品やフィットネスマシン，科学的には立証されていない健康効果を謳う空気清浄機やサプリメント，簡単な方法で英語を習得できるようになると謳う教材など，枚挙にいとまがありません。
 
 このような誇大広告に対して，政府は何らかの規制措置を取るべきでしょうか？直感的には、もちろん取るべきでしょう。市場が競争的な場合には，そのような誇大広告は消費者に（本来）不必要な財を購入させ，消費者の利益を損なうからです。しかし，ある商品の市場が寡占的状況であり、社会的に財の供給が絞られてしまっているような場合にも，それは成立するでしょうか？また，そのような場合には，どのような規制手段が好ましいでしょうか？
 
+#### 何をやったの？
+
 この研究では，2つの企業が差別化された財を供給することで競争しているような複占的状況において，企業が消費者の見せかけの支払い意思額を高めるような誇大広告を行うようなモデルを用いて，企業の誇大広告競争と，それに対する様々な規制の厚生効果を分析しました。
+
+#### 何がわかったの？
 
 結果として，寡占企業間の誇大広告競争により，誤った情報が過剰に流布され，消費者および社会全体の厚生に悪影響があることを示しました。次に，企業間の広告の外部性の程度（1社の広告がもう1社の財をどれほど魅力的にするか）と，広告（情報）発信費用の大きさが，様々な公的規制の厚生効果を決定することを明らかにしました。
 
