--- a/content/jp/post/20220611.jp.md
+++ b/content/jp/post/20220611.jp.md
@@ -2,7 +2,7 @@
 title: "PET 2022にて研究報告をしました"
 date: 2022-06-09T01:03:18+09:00
 Tags: []
-Categories: ["研究"]
+Categories: ["近況"]
 DisableComments: true
 math: true
 ---
