--- a/content/jp/post/20220611.jp.md
+++ b/content/jp/post/20220611.jp.md
@@ -37,4 +37,4 @@ math: true
 
 #### まとめると
 
-2022年6月11日現在、海外への学会出張などで渡航の必要がある場合、準備として (1) ワクチン接種証明書（アプリ）を発行済みにしておく (2) PCR検査陰性証明書を事前に印刷しておく (3) 帰国の際に、どの場所でPCR検査を受けるのかをあらかじめ調べておく の3点に気をつけていれば、それほど大変ではないと思います。みなさんも頑張ってください。
+2022年6月11日現在、海外への学会出張などで渡航の必要がある場合、準備として (1) ワクチン接種証明書（アプリ）を発行済みにしておく (2) PCR検査陰性証明書のフォーマットを事前DLして印刷して持参する (3) 帰国の際に、どの場所でPCR検査を受けるのかをあらかじめ調べておく の3点に気をつけていれば、それほど大変ではないと思います。みなさんも頑張ってください。
