--- a/content/jp/post/20221206.jp.md
+++ b/content/jp/post/20221206.jp.md
@@ -9,11 +9,9 @@ math: true
 
 論文 "[Who should be Regulated: Genuine Producers or Third Parties?](https://doi.org/10.1007/s00712-022-00808-5)" が学術雑誌 Journal of Economics に採択され、オンライン公開されました。
 
-
-
 #### 研究の背景
 
-プリンタのインク（純正カードリッジ vs 非純正汎用カードリッジ）や高級ブランド品（純正バッグと偽物）、コンピュータアクセサリ（認証ケーブルと非認証ケーブル）など、純正品（ブランド品）と非純正品（サードパーティ or 模倣品）が市場に供給されている商品は多くあります。このような市場では、純正品メーカーがサードパーティ製品を市場から追い出そうとする戦略がよく見られます。一つは、比較広告を行うことで「純正品の方が品質が良い」と消費者に思わせるよう宣伝する戦略であり、もう一つは技術的障壁を設定することで実際にサードパーティのインクやケーブルを「使えなく（にくく）する」ことです。
+プリンタのインク（純正カードリッジ vs 非純正汎用カードリッジ）や高級ブランド品（純正バッグと偽物）、コンピュータアクセサリ（認証ケーブルと非認証ケーブル）など、純正品（ブランド品）と非純正品（サードパーティ or 模倣品）が市場に供給されている商品は<!--more-->多くあります。このような市場では、純正品メーカーがサードパーティ製品を市場から追い出そうとする戦略がよく見られます。一つは、比較広告を行うことで「純正品の方が品質が良い」と消費者に思わせるよう宣伝する戦略であり、もう一つは技術的障壁を設定することで実際にサードパーティのインクやケーブルを「使えなく（にくく）する」ことです。
 
 #### 何をやったの？
 
