--- a/content/jp/post/20221206.jp.md
+++ b/content/jp/post/20221206.jp.md
@@ -2,7 +2,7 @@
 title: "論文 Who should be Regulated: Genuine Producers or Third Parties? が採択され公開されました "
 date: 2022-12-06T01:03:18+09:00
 Tags: []
-Categories: ["近況"]
+Categories: ["研究"]
 DisableComments: true
 math: true
 ---
