--- a/content/jp/post/20230412.jp.md
+++ b/content/jp/post/20230412.jp.md
@@ -15,7 +15,7 @@ math: true
 
 #### 何をやったの？
 
-私たちは「チーム生産（team production）」と呼ばれる理論に、内生的な「社会的交流」を組み込み、どのようなチームやどのようなタスクにおいて、社会的交流がチームパフォーマンスやメンバーの効用に及ぼす定性的な影響を分析しました。具体的には、2種類のタスク（補完的タスク・代替可能タスク）と、2種類のチーム構造（上下のヒエラルキーのない水平的チーム・リーダーとフォロワーから構成される垂直的チーム）に対する、社会的交流の効果を明らかにしました。
+私たちは「チーム生産（team production）」と呼ばれる理論に、内生的な「社会的交流」を組み込み、それがチームパフォーマンスやメンバーの効用に及ぼす定性的な影響を分析しました。具体的には、2種類のタスク（補完的タスク・代替可能タスク）と、2種類のチーム構造（上下のヒエラルキーのない水平的チーム・リーダーとフォロワーから構成される垂直的チーム）に対する、社会的交流の効果を明らかにしました。
 
 チームメンバー間の社会的交流は、各チームメンバーが他のチームメンバーの効用をどの程度考慮するかを表す「向社会性」の程度を類似させる効果として定義されます。つまり、自分より向社会性が高いメンバーと交流することによって自らの向社会性は高まるという正のピア効果があるものの、相手からすれば自分より向社会性が低いメンバーと交流したということになり、向社会性が低くなるという負のピア効果も同時に生じるというものです。
 
