--- a/content/jp/post/20220830.jp.md
+++ b/content/jp/post/20220830.jp.md
@@ -7,4 +7,4 @@ DisableComments: true
 math: true
 ---
 
-2022年8月25日〜27日、オーストリアのウィーン（ウィーン大学）で開催された 49th Annual Conference of the European Association for Research in Industrial Economics (EARIE 2022) にて、自身の論文 "Profit-sharing vs price-fixing collusions with heterogeneous firms" の研究報告をしました（8月27日 Session: Collusion II: 報告論文の内容については[こちらのポスト](https://httrksk.github.io/jp/post/20211125/)に記載をしています）。
+2022年8月25日〜27日、オーストリアのウィーン（ウィーン大学）で開催された 49th Annual Conference of the European Association for Research in Industrial Economics (EARIE 2022) にて、自身の論文 "Profit-sharing vs price-fixing collusions with heterogeneous firms" の研究報告をしました（8月27日 Session: Collusion II: 報告論文の内容については[こちらのポスト](https://httrksk.github.io/jp/post/20211125/)に記載をしています）。<!--more-->
