--- a/content/jp/post/20220906.jp.md
+++ b/content/jp/post/20220906.jp.md
@@ -7,4 +7,4 @@ DisableComments: true
 math: true
 ---
 
-2022年9月5日〜6日、信州大学で開催された[産業組織・競争政策研究会](http://norick.sakura.ne.jp/iocp/iocp.html)にて、自身の論文 "Profit-sharing vs price-fixing collusions with heterogeneous firms" の研究報告をしました（報告論文の内容については[こちらのポスト](https://httrksk.github.io/jp/post/20211125/)に記載をしています）。
+2022年9月5日〜6日、信州大学で開催された[産業組織・競争政策研究会](http://norick.sakura.ne.jp/iocp/iocp.html)にて、自身の論文 "Profit-sharing vs price-fixing collusions with heterogeneous firms" の研究報告をしました（報告論文の内容については[こちらのポスト](https://httrksk.github.io/jp/post/20211125/)に記載をしています）。<!--more-->
