--- a/content/jp/post/20230825.jp.md
+++ b/content/jp/post/20230825.jp.md
@@ -7,4 +7,4 @@ DisableComments: true
 math: true
 ---
 
-2023年8月24日~26日、ドイツのフランクフルトにあるGoethe Universityで開催された [27th Annual SIOE (Sociaty for Institutional & Organizational Economics) Conference](https://call.sioe.org/program/frankfurt) にて、論文 "Closing the Psychological Distance: The Effect of Social Interactions on Team Performance" を報告しました（8月25日 Session 1: Teams: 報告論文の内容については [こちらのポスト](https://httrksk.github.io/jp/post/20230412/) に記載をしています）。
+2023年8月24日~26日、ドイツのフランクフルトにあるGoethe Universityで開催された [27th Annual SIOE (Sociaty for Institutional & Organizational Economics) Conference](https://call.sioe.org/program/frankfurt) にて、論文 "Closing the Psychological Distance: The Effect of Social Interactions on Team Performance" を報告しました（8月25日 Session 1: Teams: 報告論文の内容については [こちらのポスト](https://httrksk.github.io/jp/post/20230412/) に記載をしています）。<!--more--> 
