--- a/content/jp/post/20231128.jp.md
+++ b/content/jp/post/20231128.jp.md
@@ -7,5 +7,4 @@ DisableComments: true
 math: true
 ---
 
-早稲田大学で開催された Personnel Economics Workshop (PEW) にて、論文 "Closing the Psychological Distance: The Impact of Social Interaction on Team Performance" を[報告させていただきました](https://sites.google.com/view/peworkshop/past-speaksers)。招待いただいた大湾先生をはじめ、参加者のみなさまに感謝申し上げます。
-
+早稲田大学で開催された Personnel Economics Workshop (PEW) にて、論文 "Closing the Psychological Distance: The Impact of Social Interaction on Team Performance" を[報告させていただきました](https://sites.google.com/view/peworkshop/past-speaksers)。招待いただいた大湾先生をはじめ、参加者のみなさまに感謝申し上げます。<!--more-->
