--- a/content/jp/post/20211018.jp.md
+++ b/content/jp/post/20211018.jp.md
@@ -34,3 +34,7 @@ CESifo にて、論文 "A Paradox of Coalition Building in Public Good Provision
 また、結果の2,3 については、例えばパリ協定の文脈においては、大国が、他国による提携形成を動機づけるために、より低い技術を採用するという戦略的なインセンティブによって低いNDCsを発表し、結果的に地球環境やグローバルな厚生を低下させる可能性があることを示唆しており、またそのような場合には、パリ協定のようなボトムアップアプローチを目論む部分連携の存在自体がその他の国々の技術進歩の芽を摘んでしまう可能性があることを示唆しています。
 
 ペーパーのダウンロードは [こちら](https://www.cesifo.org/node/65747) から。コメントなど頂けましたらありがたいです。
+
+***追記***
+
+こちらの論文は、2024年に [Economic Modelling に掲載されました](https://doi.org/10.1016/j.econmod.2024.106722)。
