--- a/content/jp/post/20240317.jp.md
+++ b/content/jp/post/20240317.jp.md
@@ -7,4 +7,4 @@ DisableComments: true
 math: true
 ---
 
-論文 "A Paradox of Coalition Building in Public Good Provision" (Wolfgang Buchholz 氏との共同研究) が学術雑誌 Economic Modelling に採択されました。研究の概要については[こちらのポスト](https://httrksk.github.io/jp/post/20211018/)をご覧ください。<!--more-->
+論文 "A Paradox of Coalition Building in Public Good Provision" (Wolfgang Buchholz 氏との共同研究) が学術雑誌 Economic Modelling に採択されました。論文のリンクは[こちら](https://doi.org/10.1016/j.econmod.2024.106722)。研究の概要については[こちらのポスト](https://httrksk.github.io/jp/post/20211018/)をご覧ください。<!--more-->
