--- a/content/jp/post/20250228.jp.md
+++ b/content/jp/post/20250228.jp.md
@@ -114,11 +114,7 @@ math: true
 
 組織のリーダー選抜では、従来の「強いリーダー」像にとらわれず、状況に応じて多様なタイプの人材を登用することが重要です。特に、報酬制度の設計において、プロジェクト開始前のコミットメントや失敗時の責任の取り方に関する明確なガイドラインを整備することで、効果的なリーダーシップの発揮が期待できます。
 
-リーダー育成では、報酬配分を通じた動機付けの重要性と、性別による異なるアプローチの特徴を理解し、個人特性に応じた育成を行うことが必要です。多様なリーダーシップスタイルを認める環境を整えることで、より効果的な人材育成が可能となります。
-
-プロジェクトの現場では、報酬配分決定の重要性を認識し、チーム構成において性別や個人特性を適切に考慮することが求められます。寛容さと責任感を重視する組織文化を醸成することで、失敗に対してより建設的な対応が可能となり、組織全体のパフォーマンス向上につながることが期待されます。
-
-この研究は、リーダーシップにおける報酬配分の重要性を明らかにすると同時に、従来のリーダーシップ理論に新たな視点を提供しています。特に、「慎重」で「控えめ」なリーダーの価値を再評価する契機となる可能性を示唆している点で、実務的にも大きな意義があると考えられます。
+リーダー育成では、報酬配分を通じた動機付けの重要性と、性別による異なるアプローチの特徴を理解し、個人特性に応じた育成を行うことが必要です。多様なリーダーシップスタイルを認める環境を整えることで、より効果的な人材育成が可能となります。また、これは理論分析の結果からのみ言えることですが、報酬分配ルールの事前のコミットメントが、リーダーの寛容性を引き出すことで、最も高いチームパフォーマンスを引き出すという側面も、本研究から得られた重要な知見であると考えます。
 
 <small>
 本研究は、公益財団法人 全国銀行学術研究振興財団の助成を受けました。記して感謝申し上げます。
