--- a/content/jp/post/20250228.jp.md
+++ b/content/jp/post/20250228.jp.md
@@ -12,7 +12,7 @@ math: true
 拙稿 Hattori, K., Higashida, K., Morita, K. (2025) <a href="https://papers.ssrn.com/abstract=5146087">"Leading with Generosity and Responsibility through Reward Allocation Decisions in Teams" (February 20, 2025). Available at SSRN: https://papers.ssrn.com/abstract=5146087</a>の簡単な解説
 </small>
 
-### 研究の背景
+#### 研究の背景
 
 組織におけるリーダーシップの研究は、長年にわたって行われてきましたが、その多くは指示や意思決定のスタイルに焦点を当ててきました。しかし、リーダーの重要な役割の一つに、「チームメンバーへの報酬配分」があります。
 
@@ -29,9 +29,9 @@ math: true
 
 しかし、どのようなリーダーが、どのように、またどの程度、報酬配分の決定を通じて「寛容さ」や「責任感」を示すのか、また、そのリーダーシップスタイルにどのような個人特性が影響するのかについては、これまであまり研究されてきませんでした。
 
-### 何をやったのか
+#### 何をやったのか
 
-#### 研究デザイン：2つの主要な比較
+##### 研究デザイン：2つの主要な比較
 
 この研究では、リーダーの「寛容さ」と「責任感」を、ゲーム理論を援用した理論モデルと、520名の日本人有業者を対象としたサーベイ実験にて、リーダーの報酬配分決定において、「寛容さ」や「責任感」がどのように発揮されるのかについて検証しました。「寛容さ」「責任感」とは以下のように定義されます。
 
@@ -45,7 +45,7 @@ math: true
    - リーダーが自分に配分する報酬の割合を比較し、negOut < posOut であれば「責任を取る」と定義
    - これは、失敗時により多くの責任を引き受けようとする意思決定を示す
 
-#### 数理モデルを用いた分析
+##### 数理モデルを用いた分析
 
 数理モデルを用いた理論分析では、リーダーとメンバーの2人で構成されるチーム生産モデルを考え、チームプロジェクトから生じる収入を、異なるタイミングや情報構造の下でリーダーがどのように配分するのかについて検証しました。
 
@@ -57,7 +57,7 @@ math: true
 
 という定性的予測が得られました。この理論予測を、次に説明する実験で確認しました。
 
-#### 実験を用いた分析
+##### 実験を用いた分析
 
 オンライン上の520人 (20~60歳）の有業者である参加者を「自らがあるチームにおけるリーダーとして振る舞う」と想定し、以下の異なる条件を4つのシナリオ条件（各130名）にランダムに割り当てて、その条件における「自らが決定する報酬配分ルール」について聞き取りしました:
 
@@ -82,13 +82,13 @@ math: true
 - 残りは2名のメンバーで均等に分配
 - この決定は binding（事後的な変更不可）
 
-#### 個人特性の測定
+##### 個人特性の測定
 
 上記の介入の前に、参加者は、性別とともに、利他性、楽観性、リスク選好、キャリア志向性など12の性格特性について測定し、「寛容性」や「責任感」が、どのような性別や性格のリーダーに顕著であるのかを明らかにしました。
 
-### 何がわかったのか
+#### 何がわかったのか
 
-#### 1. 寛容なコミットメントに関する発見
+##### 1. 寛容なコミットメントに関する発見
 
 **性別による違い：**
 - 女性リーダーは、プロジェクト開始前により寛容な配分を行う傾向
@@ -98,7 +98,7 @@ math: true
 - 利他性が高いリーダーほど、プロジェクト開始前に寛容な配分を行う
 - 職務満足度や楽観性・競争志向性が高い女性が、より寛容な報酬配分を選択する傾向
 
-#### 2. 責任の取り方に関する発見
+##### 2. 責任の取り方に関する発見
 
 **失敗時の対応：**
 - 男女ともに、プロジェクト失敗時は自分の報酬割合を小さく設定、つまり「責任」を示す
@@ -110,7 +110,7 @@ math: true
 - 利他性が低いリーダーの方が、より強く責任を取る傾向
 - リスク回避的、信頼度が低い、キャリア志向性が低いリーダーほど、失敗時により大きな責任を取る。つまり、従来の「強いリーダーシップ」と考えられてきた特性（リスクテイク志向、競争志向、野心的など）を持つリーダーほど、責任を取る傾向が弱いことが判明
 
-### 何の役に立つのか
+#### 何の役に立つのか
 
 組織のリーダー選抜では、従来の「強いリーダー」像にとらわれず、状況に応じて多様なタイプの人材を登用することが重要です。特に、報酬制度の設計において、プロジェクト開始前のコミットメントや失敗時の責任の取り方に関する明確なガイドラインを整備することで、効果的なリーダーシップの発揮が期待できます。
 
