--- a/content/jp/post/20250128.jp.md
+++ b/content/jp/post/20250128.jp.md
@@ -69,18 +69,16 @@ math: true
 応用ミクロ経済学の理論について、幅広く指導可能です。過去には大学院生との共同研究を国際査読雑誌に掲載した実績もあります。
 
 - **Hattori and Kitamura (2013)**
-    - "Endogenous Timing in Strategic Environmental Policymaking", Environmental and Resource Economics, 55(2), 199-215.
+    - <a href="https://doi.org/10.1007/s10640-012-9622-y">"Endogenous Timing in Strategic Environmental Policymaking", Environmental and Resource Economics, 55(2), 199-215.</a>
 
 また、最近は以下のようなチームやリーダーシップに関する研究を行っています：
 
-- **Hattori (2024)**
-    - "SLAP Typing Task: A New Experimental Paradigm for Teamwork Research", SSRN.
-- **Hattori and Yamada (2023)**
-    - "Closing the Psychological Distance: The Effect of Social Interactions on Team Performance", MPRA Paper.
+- **Hattori and Yamada (2025)**
+    - <a href="https://papers.ssrn.com/abstract=5204747">Closing the Psychological Distance: Effect of Social Interactions on Team Performance", SSRN.</a>
+- **Hattori, Higashida, and Morita (2025)**
+    - <a href="https://papers.ssrn.com/abstract=5146087">"Leading with Generosity and Responsibility through Reward Allocation Decisions in Teams", SSRN.</a>
 - **Hattori and Yamada (2020)**
-    - "Effective Leadership Selection in Complementary Teams", Journal of Institutional and Theoretical Economics.
-- **Hattori and Yamada (2018)**
-    - "Skill Diversity and Leadership in Team Production", Journal of Institutional and Theoretical Economics.
+    - <a href="https://doi.org/10.1628/jite-2020-0037">Effective Leadership Selection in Complementary Teams", Journal of Institutional and Theoretical Economics.</a>
 
 #### <i class="fas fa-check-square"></i>  希望する学生像
 
