--- a/content/jp/post/20250416.jp.md
+++ b/content/jp/post/20250416.jp.md
@@ -8,6 +8,9 @@ math: true
 
 ---
 
-SSRNにて、論文 "Closing the Psychological Distance: Effect of Social Interaction on Team Performance" (日本大学 山田 麻以氏との共同研究) を[ワーキングペーパーとして公開](https://papers.ssrn.com/abstract=5204747)しました。
+SSRNにて、論文 "Closing the Psychological Distance: Effect of Social Interaction on Team Performance" (日本大学 山田 麻以氏との共同研究) を大幅に改訂し、新しく[ワーキングペーパーとして公開](https://papers.ssrn.com/abstract=5204747)しました。
+<!--more-->
 
-内容についての簡単な解説は、[こちらのポスト](https://httrksk.github.io/jp/post/20250405/)をご覧ください。
+この論文は、2023年に公開した同様のタイトルの論文（こちらは理論のみの論文として書かれたものです）に、理論分析から得られた定性的な予測を検証するラボ実験を組み合わせたものです。理論分析を大幅に縮小しています。理論分析は新たな追加的分析を加えて、現在改訂中です。
+
+この論文の内容についての簡単な解説は、[こちらのポスト](https://httrksk.github.io/jp/post/20250405/)をご覧ください。
