--- a/content/jp/post/20250128.jp.md
+++ b/content/jp/post/20250128.jp.md
@@ -8,22 +8,22 @@ math: true
 
 ---
 
-#### <i class="fas fa-check-square"></i> 大学院生募集のお知らせ
+### <i class="fas fa-check-square"></i> 大学院生募集のお知らせ
 
 青山学院大学 経営学部大学院に進学して、私と一緒に「チーム」の研究を行いませんか？
 
-本気で学術研究者を目指す方や、所属する組織・企業にて実験的アプローチに基づいた人事・マネジメントを行いたい方を、徹底的に指導し鍛え上げます。<!--more-->
+将来の進路として学術研究者を目指す方や、所属する組織・企業にて実験的アプローチに基づいた人事・マネジメントを行いたい社会人の方など、徹底的に指導し鍛え上げます。<!--more-->
 
 学ぶべきことや必要な知識は膨大ですが、世界の誰も知らない新しい人類の知見を自ら作り上げ、それを世界中の人々と共有する作業は、楽しくて非常にエキサイティングです。
 
 この研究室は、最先端のチーム研究を世界に発信することを目標にしています。これから所属する学生と一緒に、新しい知見を生み出し、学会や国際的な査読雑誌で成果を発表していきたいと考えています。
 
-#### <i class="fas fa-check-square"></i> 何が得られるのか
+### <i class="fas fa-check-square"></i> 何が得られるのか
 
 - 世界レベルの学術雑誌への論文掲載や国際学会での発表を目指し、その過程で研究の最前線に触れる経験を得ることができます。
 - 実験的なアプローチを企業や組織でどのように活用するかを学び、私とともにその可能性を探究する機会を提供します。この研究室で習得する実験手法は、現代のマーケティングや人事戦略において即戦力となるスキルとして活かせます。
 
-#### <i class="fas fa-check-square"></i> 私の研究テーマ
+### <i class="fas fa-check-square"></i> 私の研究テーマ
 
 私の研究室では、以下のテーマを中心に研究を行っています：
 
@@ -32,39 +32,42 @@ math: true
 
 分野名としては、「応用ミクロ経済学（産業組織論・公共経済学・環境経済学）の理論」や「行動経済学・組織科学（チーム）」に関連しています。
 
-#### <i class="fas fa-check-square"></i> 最近の研究関心
+私の個人的な研究関心は、『人と人、企業と企業、国家と国家がどのように交流し、そしてなぜ協力し、ときにはなぜ競争し、また争いあうのか』を理解することです。
+
+これまでに、比較的広い分野にて研究を行なってきましたが、いつも根底にあるのはこのテーマであり、そのほとんどは、「違い（異質性）のあるプレイヤーの間での戦略的関係、とくに協力と競争の力学のようなものがテーマとなっています。
+
+### <i class="fas fa-check-square"></i> 最近の研究関心
 
 最近は、企業間競争や協力、経営戦略といった産業組織論の分野に加え、特に**チームの研究**に重点を置いています。具体的には、
 
 - ゲーム理論を用いたチームの理論
 - ラボ実験やサーベイ実験を通じた実証的な検証
 
-さらに以下のトピックスに関心を持っています：
+具体的には、以下のトピックスに関心を持っています：
 
-##### 実験研究
+#### 実験研究
 
 - チーム内でのコミュニケーションとチームメイトの感情を読み取る力が、チームパフォーマンスに与える影響
-- チーム内で、メンバー間の「相違点」と「共通点」の認知が、結束力や成果にどのように関わるか
 - リーダーによる報酬配分の決定が、チーム全体の成果や士気に及ぼす影響
 - 作業環境の違いが、チームのコミュニケーションや進捗把握、成果に及ぼす影響
 - チームメイトの存在を意識することで、タスクの難易度や自信がどう変わるか
 - チーム内での役割交換が、効率や成果に与える影響
 
-##### 理論研究
+#### 理論研究
 
 - 寡占市場において「弱い」プレイヤーがより高い利益を得る状況に関する研究
 - 新市場への内生的な企業参入と社会的に望ましい企業参入順序の違いに関する研究
-- ネットワーク財の最適プライシングに関する研究
+- ネットワーク財の最適プライシング、特に情報有意な消費者と情報劣位な消費者が混在する下での最適価格設定
 - リーダーの「（メンバーの）能力を見抜く力」がチームの効率性に及ぼす影響を探る研究
 - 知識のスピルオーバーを考慮した内生的なチーム編成に関する研究
 
-#### <i class="fas fa-check-square"></i>  指導方針
+### <i class="fas fa-check-square"></i>  指導方針
 
 研究初期には基礎的な内容をしっかりとサポートし、理論的な理解と実験設計のスキルを体系的に身につけられるよう指導します。実験の設計やデータ分析の際には、一緒に試行錯誤を重ね、最高の成果を目指します。
 
 これまでに国際的な学術誌への論文掲載や、さまざまな研究プロジェクトに関わった経験を活かし、学生たちの研究をサポートします。
 
-#### <i class="fas fa-check-square"></i>  指導可能領域
+### <i class="fas fa-check-square"></i>  指導可能領域
 
 応用ミクロ経済学の理論について、幅広く指導可能です。過去には大学院生との共同研究を国際査読雑誌に掲載した実績もあります。
 
@@ -80,7 +83,7 @@ math: true
 - **Hattori and Yamada (2020)**
     - <a href="https://doi.org/10.1628/jite-2020-0037">Effective Leadership Selection in Complementary Teams", Journal of Institutional and Theoretical Economics.</a>
 
-#### <i class="fas fa-check-square"></i>  希望する学生像
+### <i class="fas fa-check-square"></i>  希望する学生像
 
 特に以下のような学生を募集しています：
 
@@ -90,7 +93,7 @@ math: true
 
 研究を進めるにあたり最も重要なのは**熱意**です。私は、研究論文で世界と勝負できるレベルまで学生を鍛えることを目標としています。
 
-#### <i class="fas fa-check-square"></i>  必要なスキル・知識
+### <i class="fas fa-check-square"></i>  必要なスキル・知識
 
 **理論研究志望の場合：**
 
@@ -105,11 +108,11 @@ math: true
 
 特に高いスキルがなくても、研究室に配属後に私が学部で開講しているゼミや講義に参加することで、半年ほどで必要なスキルは身につきます。希望があれば、入学前にこれらに参加することも可能です。
 
-#### <i class="fas fa-check-square"></i>  研究テーマと参考リンク
+### <i class="fas fa-check-square"></i>  研究テーマと参考リンク
 
 どのようなテーマで研究ができるかについては、私の学部ゼミ生の研究テーマが参考になるかもしれません。学部ゼミでは自由なテーマ設定を行っていますが、掲げたテーマを実験を通じて科学的に解明するプロセスは大学院でも同様です。詳細は[服部ゼミNoteサイト](https://note.com/hattorizemi)をご覧ください。
 
-#### <i class="fas fa-check-square"></i>  入試情報
+### <i class="fas fa-check-square"></i>  入試情報
 
 私の研究室への所属には試験が必要です。博士前期課程では、試験を以下のいずれかの分野から1つを選択できます。
 
@@ -119,3 +122,5 @@ math: true
 試験の前にアポを取って私と会う機会があったとしても、試験内容についてお話しすることはありません（内部進学・外部進学共通）。ここにある情報が全てです。試験日時や試験時間などの詳細は大学事務にお問い合わせください。
 
 一緒に熱意を持って研究に取り組む方の応募をお待ちしております！
+
+お問い合わせなどは、[プロフィール](https://httrksk.github.io/jp/profile/)にあるメールアドレスまでMailしてください。
