--- a/content/jp/post/20251118.jp.md
+++ b/content/jp/post/20251118.jp.md
@@ -24,6 +24,6 @@ math: true
 
 ### 謝辞
 
-日本証券奨学財団には、研究活動への貴重な支援をいただき、深く感謝申し上げます。厳正な審査を経て本研究を採択してくださった審査委員の先生方にも、心より御礼申し上げます。
+日本証券奨学財団には、研究活動への貴重な支援をいただき、深く感謝申し上げます。厳正な審査を経て本研究を採択してくださった審査委員の先生方にも、心より御礼申し上げます。また、推薦書を執筆いただきました早稲田大学の大湾秀雄先生に、この場を借りて感謝申し上げます。
 
 いただいた助成金を有効に活用し、学術的に意義のある成果を生み出せるよう、精一杯努力してまいります。研究の進捗については、本ブログでも随時ご報告させていただく予定です。
