--- a/content/jp/post/20251118.jp.md
+++ b/content/jp/post/20251118.jp.md
@@ -8,7 +8,7 @@ math: true
 
 ---
 
-この度、公益財団法人日本証券奨学財団より2025年度の研究調査助成を賜りましたことを、心より感謝申し上げます。
+この度、[公益財団法人日本証券奨学財団](https://jssf.or.jp/index.html)より2025年度の研究調査助成を賜りましたことを、心より感謝申し上げます。
 
 本日（2025年11月18日）、日本証券奨学財団にて授賞式が開催され、出席させていただきました。式典では採択された研究の概要についてプレゼンテーションの機会をいただき、他の採択者の先生方の多様な研究テーマに触れることができ、大変刺激的な時間となりました。<!--more-->
 
