--- a/content/jp/post/20250405.jp.md
+++ b/content/jp/post/20250405.jp.md
@@ -38,7 +38,7 @@ math: true
 
 1. 社会的交流は必然的に向社会性の低いチームメンバーの努力を増加させるが、向社会性の高いメンバーの努力を増加させるかどうかは努力の補完性に依存する。
 2. 社会的交流は、初期の向社会性分布に関係なく、チーム全体のパフォーマンスを向上させる。
-3. この社会的交流がチームパフォーマンスを高める効果は、より高い努力の補完性とより高いリスク回避性を持つチームでより強く現れる。
+3. この社会的交流がチームパフォーマンスを高める効果は、より高い努力の補完性とより高い損失回避性を持つチームでより強く現れる。
 
 ##### 実験
 
@@ -69,9 +69,9 @@ math: true
 4. 社会的交流が向社会性ギャップの縮小をもたらすことに、感情的知覚力が重要な役割を果たす。  
    おそらく最も興味深いことに、社会的交流はチームメイトがお互いの向社会的態度を正確に予測する能力（「感情的知覚力」）を高め、それが向社会性ギャップの縮小をもたらすという有意な媒介効果が得られました。この知覚の向上が向社会性ギャップの縮小の驚くべきことに98%を説明しました。
 
-5. 社会的交流がパフォーマンスを高める効果は、同性チーム（特に女性ペア）、またはメンバーのリスク回避傾向が高いチームでより強く働きました。
+5. 社会的交流がパフォーマンスを高める効果は、同性チーム（特に女性ペア）、またはメンバーの損失回避傾向が高いチームでより強く働きました。
 
-おそらく同性のチームはコミュニケーションの障壁が低く、社会的交流の効果が強かったこと、または、リスクを恐れる人たちにとって事前コミュニケーションが心理的に安全な環境を作り、それがもたらす対人リスクの減少の効果が大きかったのだろうと推測できます。
+おそらく同性のチームはコミュニケーションの障壁が低く、社会的交流の効果が強かったこと、または、失敗（損失）を恐れる人たちにとって事前コミュニケーションが心理的に安全な環境を作り、それがもたらす対人リスクの減少の効果が大きかったのだろうと推測できます。
 
 #### 何の役に立つのか
 
