--- a/content/jp/post/20251203.jp.md
+++ b/content/jp/post/20251203.jp.md
@@ -1,5 +1,5 @@
 ---
-title: "AGU Re:Search Forum 2025でポスター報告をしました"
+title: "AGU Re:Search Forum 2025でポスター報告をさせていただきました"
 date: 2025-12-03T01:03:18+09:00
 Tags: []
 Categories: ["研究"]
@@ -17,3 +17,7 @@ math: true
 今回のポスター報告では、研究者でない方々へのリーチであるということもあって、表現をややキャッチーにしたり、数理モデルを割愛するなどして、ビジネスパーソンの方々でも興味を持って聞いていただけるように工夫をし、タイトルも『社会的交流とチームパフォーマンス: 「雑談」がチームを強くする科学的メカニズム』と設定しました。
 
 そのおかげもあったのか、多くの人に楽しんで研究を聞いていただき、またその後のトークも大変盛り上がり、また、そこから私も多くのインスピレーションを感じることができました。ここに記して感謝申し上げます。
+
+
+
+この研究論文についての記事は、[こちら](https://httrksk.github.io/jp/post/20250405/)にもあります。興味のある方はご覧ください。
