--- a/content/jp/post/20251224.jp.md
+++ b/content/jp/post/20251224.jp.md
@@ -8,4 +8,6 @@ math: true
 
 ---
 
-[独立行政法人経済産業研究所（RIETI）のディスカッション・ペーパー](https://www.rieti.go.jp/jp/publications/summary/25120022.html)として論文 "The Burden of Excellence: Endogenous Efficiency Paradoxes under Coopetition" （大阪公立大学 吉川 丈 氏との共同研究）を公開しました。
+[独立行政法人経済産業研究所（RIETI）のディスカッション・ペーパー](https://www.rieti.go.jp/jp/publications/summary/25120022.html)として論文 "The Burden of Excellence: Endogenous Efficiency Paradoxes under Coopetition" （大阪公立大学 吉川 丈 氏との共同研究）を公開しました。<!--more-->
+
+本論文の執筆にあたっては、友人やRIETIの研究会メンバーなど、多くの方の助言をいただきました。感謝いたします。論文についての日本語での解説については、[こちらのポスト](https://httrksk.github.io/jp/post/20251226/)もご覧ください。
